[package]
name = "minicoroutine"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/YC-Lammy/minicoro-sys"
description = "mini coroutine library in rust"

keywords = ["minicoro", "coroutine", "generator", "stackful", "concurrency"]
categories = ["concurrency", "asynchronous", "no-std", "no-std::no-alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minicoro-sys = "0.8.1"

[features]
default = ["std"]
std = []